--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Tortin - Tortin is a responsive theme for GitHub Pages with color options</title>
+  <title>Storefront Docs</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="VTEX Lab">
-  <meta property="og:site_name" content="Tortin"/>
-  <meta property="og:image" content="img/screeshot.png"/>
-  <meta name="description" content="Tortin is a responsive theme for GitHub Pages with color options" />
+  <meta property="og:site_name" content="Docs"/>
+  <meta name="description" content="Storefront docs" />
 
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Montserrat|Source+Sans+Pro:200,400,600">
